; ModuleID = '/home/carl/AnghaBench/libgit2/src/xdiff/extr_xemit.c_xdl_emit_record.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/xdiff/extr_xemit.c_xdl_emit_record.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64, i8*, i32*)* @xdl_emit_record to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xdl_emit_record(i32* %0, i64 %1, i8* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store i64 %1, i64* %7, align 8
  store i8* %2, i8** %8, align 8
  store i32* %3, i32** %9, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = call i64 @strlen(i8* %13)
  store i64 %14, i64* %11, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = load i64, i64* %7, align 8
  %17 = call i64 @xdl_get_rec(i32* %15, i64 %16, i8** %12)
  store i64 %17, i64* %10, align 8
  %18 = load i8*, i8** %12, align 8
  %19 = load i64, i64* %10, align 8
  %20 = load i8*, i8** %8, align 8
  %21 = load i64, i64* %11, align 8
  %22 = load i32*, i32** %9, align 8
  %23 = call i64 @xdl_emit_diffrec(i8* %18, i64 %19, i8* %20, i64 %21, i32* %22)
  %24 = icmp slt i64 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %4
  store i32 -1, i32* %5, align 4
  br label %27

26:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %27

27:                                               ; preds = %26, %25
  %28 = load i32, i32* %5, align 4
  ret i32 %28
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i64 @xdl_get_rec(i32*, i64, i8**) #1

declare dso_local i64 @xdl_emit_diffrec(i8*, i64, i8*, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
